manifests/tools/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.20-nightly
    version: 1.20-nightly
  name: gitea
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea
      app.kubernetes.io/name: gitea
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitea
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/name: gitea
        app.kubernetes.io/version: 1.20-nightly
        version: 1.20-nightly
    spec:
      containers:
        - image: gitea/gitea:1.20-nightly-rootless
          imagePullPolicy: Always
          name: gitea
          ports:
            - containerPort: 2222
              name: ssh
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data-claim
