manifests/tools/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: tools
spec:
  type: LoadBalancer
  ports:
    - name: gitea-http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: gitea-ssh
      port: 22
      protocol: TCP
      targetPort: 2222
  selector:
    app: gitea
